--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Comming soon</title>
   </head>
   <body>
-    <h1>Nothing here yet</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Nothing here yet, but work is in progress ;)</h1>
+    <p>Check out my <a href="https://www.codewars.com/users/jakub-ziolkowski">codewars</a> profile.</p>
   </body>
 </html>
